# acegen-open

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  analyse_logs.py  config.yaml  dataset  dqn.py  dqn_config.yaml  env.py  environment.yml  environment_molscore.yml  example.py  lol.py  ppo.py  ppo2.py  ppo_config.yaml  ppo_independent.py  ppo_kl_loss.py  ppo_kl_loss_td.py  ppo_kl_reward.py  ppo_minimal.py  ppo_nocat.py  ppo_old.py  ppo_reproduce_error.py  ppo_shared.py  ppo_shared2.py  ppo_shared3.py  ppo_shared_kl_loss.py  ppo_shared_kl_losss.py  ppo_shared_kl_reward.py  pyproject.toml  pytest.ini  reinvent.py  reproduce_device_error.py  reproduce_kl_error.py  requirements.txt  reward_transform.py  sac.py  (+10 more)
.github/unittest/: install_dependencies.sh  install_dependencies.shyy  install_dependencies_nightly.sh
.github/unittests/: install_dependencies.sh  install_dependencies_nightly.sh
.github/workflows/: lint.yml  unit_tests.yml
acegen/: README.md  __init__.py  _compat.py  profiler.py  script_helpers.py
acegen/data/: __init__.py  chem_utils.py  replay_buffer.py  replay_buffer2.py  replay_buffer_old.py  smiles_dataset.py  utils.py
acegen/dataset/: __init__.py  smiles_dataset.py
acegen/experience_replay/: replay_buffer.py  replay_buffer2.py
acegen/models/: __init__.py  _mamba.py  clms.py  common.py  gpt.py  gpt2.py  gru.py  llama2.py  lstm.py  mamba.py  mamba_hf.py  utils.py
acegen/priors/: ascii.pt  chembl_filtered_vocabulary.txt  chembl_vocabulary.txt  custom_ascii.pt  custom_model.ckpt  gru_chembl34_vocabulary.ckpt  gru_guacamol_vocabulary.ckpt  gru_zinc250k_vocabulary.ckpt  lstm_guacamol_vocabulary.txt  mamba_chembl_filtered_vocabulary.ckpt  zinc_vocabulary.txt
acegen/rl_env/: __init__.py  baselines.py  smiles_env.py  token_env.py  utils.py
acegen/rl_environments/: __init__.py  multi_step_env.py  multi_step_smiles_env.py  single_step_env.py  (+2 more)
analysis/: analyse_logs.py
environment/: __init__.py  env.py  vocabulary.py
models/: __init__.py  dqn.py  ppo.py  sac.py
molscore_configs/: 5HT2A_SerotoninDopamineSelective_noDF.json
old/: CatFrames.py  ppo.py  ppo_independent.py  ppo_kl_loss.py  ppo_kl_reward.py  ppo_minimal.py  utils.py  writer.py
pretrain/: dataset.py  pretain.py
priors/: Prior_Epoch-5_state.ckpt.voc  chembl_vocabulary.prior  chembl_vocabulary.txt  enamine_real_vocabulary.txt  morgan_vocabulary.txt  reinvent_vocabulary2.txt  vocabulary.prior
rl_environments/: __init__.py  de_novo_env.py  de_novo_env_td.py  decorative_env.py  multi_step_env.py  single_step_env.py  vocabulary.py  wrappers.py
scoring/: drd2_qsar.py
scripts/: mcp_run.py  run.py
tests/: conftest.py  test_cross_entropy_compat.py  test_data_utils.py  test_environment.py  test_environments.py  test_gpt2_model.py  test_gru_model.py  test_gru_models.py  test_llama2_model.py  test_lstm_model.py  test_mamba_model.py  test_replay_buffer.py  test_scoring_function.py  test_tokenizers.py  test_transforms.py  test_vocabulary.py  utils.py
torun/: README.md
transforms/: __init__.py  burnin_transform.py  penalise_repeated_transform.py  reward_transform.py
tutorials/: add_custom_model.md  adding_custom_model.md  adding_custom_scoring_function.md  breaking_down_configuration_files.md  hyperparameter_optimisation_with_wandb.md  understanding_the_smiles_environment.md  understanding_the_token_environment.md  using_promptsmiles.md
vocabulary/: vocabulary2.py
wip/: reward_transform.py  writer.py
(+344 files in other folders)
