[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
per-file-ignores =
    __init__.py: F401
    acegen/vocabulary/vocabulary.py: W605
    acegen/data/utils.py: E203
    acegen/data/replay_buffer_old.py: E203

[pydocstyle]
;select = D417 # Missing argument descriptions in the docstring
;inherit = false
match = .*\.py
;match_dir = ^(?!(.circlecli|test)).*
convention = google
add-ignore = D100, D104, D105, D107, D102
ignore-decorators =
    test_*
;    test/*.py
;    .circleci/*
